@@ -24,3 +24,4 @@ Removals, Deprecations, Breaking Changes
   + Code of the old SCEP layers has been removed (SCEP and LibSCEP)
   + Usage of PKCS7 wrapped JSON in RPC layer now requires explicit activation in wrapper config
   + x509 based auth handlers do no longer accept the default_role parameter, role must be used instead
+  + Legacy format spec including mime type for download fields is no longer supported (format: download/mime/type)
